fix popper z-index

--- a/src/assets/styles/calendar-overrides.css
+++ b/src/assets/styles/calendar-overrides.css
@@ -134,3 +134,7 @@
     font-size: 1.75em;
   }
 }
+
+.App .react-datepicker-popper {
+  z-index: 10;
+}
